[1.0.0] Login local account function

--- a/src/views/main/master.ejs
+++ b/src/views/main/master.ejs
@@ -17,8 +17,8 @@
 <body onload="spinLoaded()">
     <!--Icon loader-->
     <div id="loader"></div>
-    
-    <div class="master-success-message alert alert-success">Success example</div>
+
+    <%- include('alert/alert'); %>
 
     <%- include('navbar/navbar'); %>
     
